--- a/MEANJS/public/index.html
+++ b/MEANJS/public/index.html
@@ -22,13 +22,22 @@
                 <th>Name</th>
                 <th>Email</th>
                 <th>Number</th>
+                <th>Action</th>
                </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td><input class="form-control" ng-model="contact.name"/></td>
+                    <td><input class="form-control" ng-model="contact.email"/></td>
+                    <td><input class="form-control" ng-model="contact.number"/></td>
+                    <td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
+
+                </tr>
                 <tr ng-repeat="contact in contactList">
                     <td>{{contact.name}}</td>
                     <td>{{contact.email}}</td>
                     <td>{{contact.number}}</td>
+                    <td><button class="btn btn-danger" ng-click="remove(contact._id)">Remove</button></td>
                 </tr>
             </tbody>
         </table>
