--- a/MEANJS/public/index.html
+++ b/MEANJS/public/index.html
@@ -31,6 +31,7 @@
                     <td><input class="form-control" ng-model="contact.email"/></td>
                     <td><input class="form-control" ng-model="contact.number"/></td>
                     <td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
+                    <td><button class="btn btn-info" ng-click="update()">Update</button></td>
 
                 </tr>
                 <tr ng-repeat="contact in contactList">
@@ -38,6 +39,7 @@
                     <td>{{contact.email}}</td>
                     <td>{{contact.number}}</td>
                     <td><button class="btn btn-danger" ng-click="remove(contact._id)">Remove</button></td>
+                    <td><button class="btn btn-warning" ng-click="edit(contact._id)">Edit</button></td>
                 </tr>
             </tbody>
         </table>
